<resources>
    <string name="app_name">lab3_1</string>
    <string name="TextBt1">Главная</string>
    <string name="TextBt2">Украина</string>
    <string name="TextBt3">Канада</string>
    <string name="btnClose">Казахстан</string>
    <string name="kaz">Казахстан – государство в Центральной Азии, которое раньше входило в состав СССР. Оно простирается от Каспийского моря на западе до Алтайских гор на востоке, где проходит граница с Китаем и Россией. Алма-Ата – самый большой город и важный торговый центр страны. Среди достопримечательностей города стоит отметить Вознесенский собор Русской православной церкви, построенный при Николае II, и Центральный государственный музей Республики Казахстан, тысячи экспонатов которого позволяют получить представление об истории государства.</string>
    <string name="can">Канада – североамериканская страна, простирающаяся от границы с США на юге до полярного круга на севере. Крупнейшие города – многолюдный Торонто, расположенный на западном побережье центр киноиндустрии Ванкувер, франкоязычные Монреаль и Квебек и столица страны Оттава. Значительную часть Канады занимают территории с дикой природой, в том числе национальный парк Банф в Скалистых горах со множеством озер. Кроме того, здесь находится всемирно известный Ниагарский водопад.</string>
    <string name="ukr">Украина – это большая страна в Восточной Европе, известная православными церквями, черноморскими курортами и лесистыми горами. В Киеве, столице страны, расположен Софийский собор, украшенный золотыми куполами, мозаикой XI века и фресками. Над рекой Днепр возвышается монастырь Киево-Печерская лавра, место паломничества многих православных христиан. В ее скитах хранятся религиозные реликвии, а в катакомбах – мумифицированные останки православных монахов. </string>
</resources>